ds-529: fix icon alignment

--- a/packages/components/bolt-teaser/src/teaser.scss
+++ b/packages/components/bolt-teaser/src/teaser.scss
@@ -293,10 +293,10 @@
   margin-right: var(--bolt-spacing-y-small);
   font-size: var(--bolt-type-font-size-xsmall);
   line-height: var(--bolt-type-line-height-xsmall);
+}
 
-  [class*='e-bolt-icon'] {
-    @include bolt-inline-icon-wrapper; /* [1] */
-  }
+.c-bolt-teaser__views--icon {
+  @include bolt-inline-icon-wrapper;
 }
 
 .c-bolt-teaser__action-list {
